fixed horizontal scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
-body{
+html, body{
     overflow-x: hidden;
+}
+body{
+    position: relative
 }
 .Top{
     text-align: center;
